# urdu-panjabi-pair

./: .gitattributes  Makefile.am  README  README.md  apertium-ur-pa.ur-pa.dix  apertium-urd-pan.urd-pan_Arab.dix  apertium-urd-pan.urd-pan_Guru.dix  configure.ac  modes.xml
